@@ -34,6 +34,7 @@
             --add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.profiling=ALL-UNNAMED
             --add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.registry=ALL-UNNAMED
             --add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.serialization=ALL-UNNAMED
+            --add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.transaction=ALL-UNNAMED
             --add-exports=org.mule.runtime.errors/org.mule.runtime.config.internal.error=ALL-UNNAMED
               --add-opens=org.mule.runtime.extension.model/org.mule.runtime.config.internal.validation=ALL-UNNAMED
               --add-opens=org.mule.runtime.artifact.ast.xmlParser/org.mule.runtime.ast.api.xml=org.mule.runtime.spring.config
@@ -64,6 +65,7 @@
                             <compilerArgs>
                                 <arg>--add-exports=org.mule.runtime.artifact.ast/org.mule.runtime.ast.internal=org.mule.runtime.spring.config</arg>
                                 <arg>--add-exports=org.mule.runtime.artifact.ast/org.mule.runtime.ast.internal.validation=org.mule.runtime.spring.config</arg>
+                                <arg>--add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.transaction=ALL-UNNAMED</arg>
                             </compilerArgs>
                         </configuration>
                     </execution>
